# sui-bench

./: .gitignore  Cargo.toml  README.md  nitro.config.ts  package-lock.json  pnpm-lock.yaml  tsconfig.json
.nitro/types/: nitro-routes.d.ts
.output/: nitro.json
.output/server/: index.mjs  package.json
fdp_lsm_results/: benchmark_results.csv
move/io_churn/: Move.toml
scripts/: bench  bench.sh  fdp-lsm-benchmark.sh  fdp_mount.sh  fdp_semantic_mount.sh  fdp_stats  fdp_stats.cc  high-churn-benchmark.sh  max-device-write-bench.sh  swarm_bench.sh  swarm_safe.sh  update-heavy-bench.sh
scripts/fdp_lsm_results/: final_comparison.txt
server/: view-results.sh
server/reports/: fdp_comparison_20260131_135422.txt  fdp_comparison_20260131_135730.txt  fdp_comparison_20260131_135905.txt
server/src/: config.ts  index.ts  publish.ts  strategies.ts  sui-utils.ts
src/: main.rs
sui1/: .gitignore
sui1/scripts/: .config.ts  .get_counters.ts  .prepare_gas.ts  01-setup.sh  02-bench.sh  client.yaml  create_counters_parallel.ts  create_new_counters.ts  deploy_tps_test.ts  fetch_onchain_counters.ts  fill_ssd.ts  generate_accounts.ts  multi_accounts.json  package-lock.json  package.json  sui.aliases  sui.keystore  tps_run.ts
sui2/: .env.example  .gitignore  package-lock.json  package.json
sui2/docker/: Dockerfile  push.sh  versions.sh
sui2/docs/: FDP-STRATEGY.md
sui2/scripts/: 01-setup.sh  02-bench.sh  collect-benchmark-results.sh  fdp-benchmark-compare.sh  fdp-epoch-watcher.sh  fdp-stats.sh  (+11 more)
ts-bench/: package-lock.json  tsconfig.json
utils/: metrics.ts  queue.ts
(+91 files in other folders)
