[package]
name = "fdp-sui-bench"
version = "0.1.0"
edition = "2021"
description = "FDP SUI Benchmark - SDK-based high-throughput I/O load generator"

[dependencies]
# SUI SDK
sui-sdk = { path = "../../sui/crates/sui-sdk" }
sui-keys = { path = "../../sui/crates/sui-keys" }

# Async runtime
tokio = { version = "1.36", features = ["full", "rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"

# CLI and config
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "fdp-sui-bench"
path = "src/main.rs"
